// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resolveConfig gets default config 1`] = `
Object {
  "baseClassName": "",
  "baseDefaultProps": Object {
    "fill": "currentColor",
  },
  "baseName": "./Icon",
  "baseTemplate": [Function],
  "camelCaseProps": true,
  "defaultProps": Object {},
  "filenameTemplate": [Function],
  "indexTemplate": [Function],
  "name": "Icon",
  "svgoPlugins": Array [],
  "template": [Function],
}
`;

exports[`resolveConfig overwrites default config 1`] = `
Object {
  "baseClassName": "MyIcon",
  "baseDefaultProps": Object {
    "fill": "currentColor",
  },
  "baseName": "./Icon",
  "baseTemplate": [Function],
  "camelCaseProps": true,
  "defaultProps": Object {},
  "filenameTemplate": [Function],
  "indexTemplate": [Function],
  "name": "Icon",
  "svgoPlugins": Array [
    Object {
      "removeAttrs": Object {
        "attrs": "fill",
      },
    },
  ],
  "template": [Function],
}
`;
